	(CygbuildMakefilePrefixCheck): Add input arg MAKEFILE and throw away
	Makefile name guessing code.
	(CygbuildCmdMkpatchMain): Check unpatch failure.
	(CygbuildDefineGlobalCompile): Remove C++ autodetections.
	(CygbuildPatchPrefixStripCountFromFilename): Return error code.
	(CygbuildPatchPrefixStripCountFromContent): Return error code.
	Improve -p1 detection.

2008-02-19  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdReadmeRemoveFileSection): Remove
	awk edit. Moved to perl library.
	(CygbuildBootVariablesGlobalMain): Add --binary to CYGBUILD_PATCH_OPT.
	(CygbuildPatchApplyMaybe): Fix problem with `unpatch' where not
	all files ere patched.
	(CygbuildBootVariablesGlobalMain): Remove
	`cygbuild_opt_exclude_cygbuild'.
	(CygbuildCmdPkgSourceCvsMain): Remove.
	(CygbuildCmdPkgSourceMain): Remove version contol handling.
	(CygbuildCommandMain): Remove --checkout option.
	(CygbuildCmdPkgSourceCvsdiff): Remove.
	(CygbuildBootVariablesGlobalMain): Remove CYGBUILD_CVSDIFF_OPTIONS.
	Move CYGBUILD_DIFF_OPTIONS opions to new variable
	`cygbuild_opt_exclude_cache_files'.
	(CygbuildCmdConfMain): Add case for configure.in
	(CygbuildCmdReadmeFixFile): Remove binpkg tar `CygbuildExitNoFile' call.
	(CygbuildCmdReadmeFixMain): Remove binpkg tar file check.
	(CygbuildDefineGlobalMain): Change SCRIPT_CONFIGURE_CYGFILE and
	SCRIPT_BUILD_CYGFILE use relative paths.

	* bin/cygbuild.pl (ReadmeFix): Add Copyright year update.
	Remove 'files included...' section.
	(HELP::OPTIONS): Remove --checkout option and related documentation.
	Change -C to -c (color) short option.
	(HELP::Other commands::download): Update perl webget project URL.
	(PackageCVScoScript): Remove.
	(PackageCVSmain): Remove.
	(ReadmeFix): Add missing \n to 'Files included in' substitution.

2008-02-18  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::Packaging commands): Remove functionality
	no longer presend in command `readmefix.

	* etc/template/package.README (Language): Typo in word